@@ -1,6 +1,7 @@
 ===========================================================================
 5.3.1
 
+Added: @DataProvider name defaults to method name
 Added: support for remote protocol to pass parameter information
 Fixed: TextReporter logs information about the parameters of the test methods
 Fixed: concurrency issue in JUnitXMLReporter
